# nothing

./: CMakeLists.txt  LICENSE.md  README.md
src/: main.cpp
src/core/: database.cpp  database.hpp  scanner.cpp  scanner.hpp  utils.cpp  utils.hpp  watcher_linux.cpp  watcher_linux.hpp  watcher_windows.cpp  watcher_windows.hpp
src/gui/qt/: main.cpp  mainwindow.cpp  mainwindow.hpp  pathsdialog.cpp  pathsdialog.hpp  propsdialog.cpp  propsdialog.hpp  tablemodel.cpp  tablemodel.hpp
src/gui/res/: license.txt  res.qrc
